--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/cosmos": "^4.0.0",
     "@azure/functions": "^4.0.0",
+    "@azure/web-pubsub": "^1.1.1",
     "axios": "^1.6.7"
   },
   "devDependencies": {
