--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "npx jest",
+    "test-coverage": "npx jest --coverage"
   },
   "dependencies": {
     "@azure/cosmos": "^4.0.0",
@@ -17,8 +18,12 @@
     "axios": "^1.6.7"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.19.23",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "rimraf": "^5.0.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.0.0"
   },
   "main": "dist/src/functions/*.js"
