--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "start": "func start",
+    "start:retrieval": "func start --functions FFRetrievalFunction",
     "test": "npx jest",
     "test-coverage": "npx jest --coverage"
   },
